fixed spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,9 +12,6 @@
     border: 1px solid black;
 }
 
-.tree {
-    border: 1px solid black;
-}
 .tree, .tree ul, .tree li {
     position: relative;
 }
@@ -22,6 +19,10 @@
 .tree, .tree ul {
     list-style: none;
     padding-left: 32px;
+}
+.tree {
+    border: 1px solid black;
+    padding: 0px 16px;
 }
 
 .tree li::before, .tree li::after {
@@ -62,4 +63,9 @@
     display: block;
 }
 
-
+.error {
+    display:flex;
+}
+.error > * {
+    margin: 0px 16px;
+}
